fixed horizontal scroll on tablets

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -725,7 +725,7 @@ $footer-height-mobile: 1446px;
     text-align: center;
     color: #253757;
 
-    width: 558px;
+    width: 550px;
     margin-top: 200px;
 
     @media (min-width: 1024px) {
@@ -741,7 +741,7 @@ $footer-height-mobile: 1446px;
     text-align: center;
     color: #6c788b;
 
-    width: 558px;
+    width: 550px;
     margin-top: 24px;
 
     @media (min-width: 1024px) {
